--- a/poker.ui/src/app.html
+++ b/poker.ui/src/app.html
@@ -24,7 +24,7 @@
         <li><a href="#" route-href="route: faq">Help/FAQ</a></li>      
         <li class="dropdown hidden-md hidden-sm hidden-xs">
             
-          <a class="dropdown-toggle " data-toggle="dropdown" href="#"> </span>Buy DASH <span class="nav-dash-icon"></span> 
+          <a class="dropdown-toggle " data-toggle="dropdown" href="#"> </span>Buy SOLANA <span class="nav-solana-icon"></span> 
 
           <span class="caret"></span>
         
