--- a/poker.ui/src/poker-rooms.html
+++ b/poker.ui/src/poker-rooms.html
@@ -4,7 +4,7 @@
   <div style="margin-top: 10px;">
     <!-- <button class="btn btn-xs btn-primary" click.delegate="cashGamesVisible=true">Cash Games</button>
     <button class="btn btn-xs btn-primary" click.delegate="cashGamesVisible=false">Tournaments</button> -->
-    <h4>Casual Tables</h4>
+    <h4 class="table_title">Cash Games</h4>
     <table class="poker-tables margin-top-5">
       <thead>
         <tr>
@@ -29,7 +29,7 @@
       </tbody>
     </table>
 
-    <h4 style="margin-top:50px;">Tournaments</h4>
+    <h4 class="table_title" style="margin-top:50px;">Tournaments</h4>
     <div>
       <p style="text-align: center; margin-top: 10px;">Click a tournament to Join</p>
       <table class="poker-tables margin-top-5" >
