--- a/poker.ui/src/poker-table.html
+++ b/poker.ui/src/poker-table.html
@@ -128,7 +128,7 @@
   
   <div class="poker-tables-container">
       <next-tournament></next-tournament>
-    <compose view-model="global-chat" view.bind="global-chat.html" containerless></compose>      
+    <!-- <compose view-model="global-chat" view.bind="global-chat.html" containerless></compose>       -->
     <div id="leaderboard-rhs">
         <compose view-model="leaderboard" view.bind="leaderboard.html" containerless></compose>    
       </div>
