--- a/poker.ui/index.html
+++ b/poker.ui/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Online Crypto Poker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="http://localhost:9000/favicon.ico">
+  <link rel="shortcut icon" href="http://3.126.18.118:9000/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
   <noscript id="deferred-styles">    
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -87,8 +87,9 @@
 
 <body aurelia-app="main">
   <div class="splash">
-    <img src="http://localhost:9000/images/logo.png" />
     
+     <img src="http://3.126.18.118:9000/images/logo3.png" />
+   
     <div class="message">Loading...
       <div class="spinner">
         <div class="bounce1"></div>
@@ -116,7 +117,7 @@
   <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper" async></script>
   <style>
     body:after {
-      content: url('http://localhost:9000/images/bg-green.png') url('http://localhost:9000/images/default-user.png') url('http://localhost:9000/images/chip.png') url('http://localhost:9000/images/cards-sprite.png');
+      content: url('http://3.126.18.118:9000/images/bg-green.png') url('http://3.126.18.118:9000/images/default-user.png') url('http://3.126.18.118:9000/images/chip.png') url('http://3.126.18.118:9000/images/cards-sprite.png');
       display: none;
     }
   </style>
