--- a/poker.ui/src/account-settings.html
+++ b/poker.ui/src/account-settings.html
@@ -12,7 +12,7 @@
         <li><a data-toggle="tab" role="tab" href="#withdrawFunds" ref="withdrawTab">Withdraw</a></li>
         <li><a data-toggle="tab" role="tab" href="#depositFunds" ref="depositTab">Deposit</a></li>
         <li><a data-toggle="tab" role="tab" href="#paymentHistory" ref="historyTab">Payment History</a></li>
-        <li><a data-toggle="tab" href="#reconcilliation">Send Funds</a></li>
+        <!-- <li><a data-toggle="tab" href="#reconcilliation">Send Funds</a></li> -->
         
       </ul>
       <div class="tab-content">
